# pydeflate

./: .buildinfo  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .readthedocs.yaml  .travis.yml  4.0  404.html  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  DOCS.md  DOCS_ENHANCEMENTS.md  DOCS_FINAL.md  DOCS_SETUP.md  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.MD  README.md  README.rst  __init__.py  conf.py  coverage.xml  default.mk  deflate.py  genindex.html  index.html  makefile  mkdocs.yml  modules.html  objects.inv  pydeflate.deflate.html  pydeflate.get_data.html  (+15 more)
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  dev.yml  docs.yml  documentation.yaml  documentation.yml  preview.yml  publish.yaml  release.yaml  release.yml
.pydeflate_data/: NY.GDP.DEFL.ZS_1950_2025.feather
_build/doctrees/: CHANGELOG.doctree  environment.pickle  index.doctree
_build/html/: .buildinfo  CHANGELOG.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
_sources/: index.rst.txt
advanced/context/: index.html
advanced/exceptions/: index.html
advanced/groups/: index.html
advanced/plugins/: index.html
advanced/validation/: index.html
data-sources/: index.html
deflate/: index.html
deflation/: index.html
docs/: Makefile  api.md  conf.py  data-sources.md  deflate.md  deflation.md  exchange.md  faq.md  getting-started.md  index.md  index.rst  installation.md  installation.rst  make.bat  migration.md  modules.rst  pydeflate.deflate.rst  pydeflate.get_data.rst  pydeflate.rst  requirements.txt  usage.md  usage.rst
docs/advanced/: context.md  exceptions.md  groups.md  plugins.md  validation.md
docs/source/: conf.py  index.rst  pydeflate.get_data.rst  usage.rst
exchange/: index.html
faq/: index.html
getting-started/: index.html
migration/: index.html
pydeflate/: __init__.py  config.py  deflate.py  pydeflate_config.py  utils.py
pydeflate/.pydefate_data/: dac1.feather
pydeflate/.pydeflate_data/: FP.CPI.TOTL_1950_2025.feather  NY.GDP.DEFL.ZS.AD_1950_2025.feather  NY.GDP.DEFL.ZS_1950_2025.feather  PA.NUS.FCRF_1950_2025.feather  PX.REX.REER_1950_2025.feather  dac1.feather  data_updates.json  wb_class.csv
pydeflate/core/: api.py  classes.py  deflator.py  dtypes.py  exchange.py  schema.py  source.py
pydeflate/data/: FP.CPI.TOTL_1950_2025.feather  NY.GDP.DEFL.ZS.AD_1950_2025.feather  NY.GDP.DEFL.ZS_1950_2025.feather  PA.NUS.FCRF_1950_2025.feather  PX.REX.REER_1950_2025.feather  dac1.feather  dac_deflators.csv  dac_exchange_rates.csv  data_updates.json  deflators_data.csv  exchange_data.csv  gdp_const_raw.csv  gdp_lcu_raw.csv  wb_class.csv
pydeflate/deflate/: ..__init__ 2.py.icloud  __init__.py  deflate.py  deflate_new.py  deflator.py  deflators.py  legacy_deflate.py
pydeflate/exchange/: exchangers.py
pydeflate/get_data/: __init__.py  data.py  deflate_data.py  exchange.py  exchange_data.py  imf.py  imf_data.py  oecd.py  oecd_data.py  oecd_tools.py  wb_data.py  world_bank.py
pydeflate/settings/: oecd_codes.json
pydeflate/sources/: common.py  dac.py  imf.py  world_bank.py
pydeflate/tests/: agriculture_spending_constant.csv
pydeflate/tools/: common.py  exchange.py  update_data.py
scripts/: generate_country_mapping.py
search/: search_index.json
source/: conf.py  index.rst  pydeflate.rst  pydeflate.tools.rst
src/pydeflate/: __init__.py  cache.py  constants.py  context.py  convert.py  exceptions.py  plugins.py  protocols.py  pydeflate_config.py  schemas.py  utils.py
stylesheets/: extra.css
tests/: conftest.py  data_test.py  test_dac_deflator.py  test_dac_totals.py  test_pydeflate.py  test_utils.py  test_wb_ppp.py
tests/integration/: test_dac_deflators.py  test_exchange_wrappers.py  test_get_deflators.py  test_get_rates.py  test_group_deflator_integration.py  test_imf_deflators.py  test_world_bank_deflators.py
tests/property/: test_deflation_properties.py  test_group_deflator_properties.py
tests/regression/: test_add_iso3_e2e.py  test_aggregate_alias_mapping.py  test_dac_missing_entities.py  test_eur_aliases.py  test_eur_deflation.py  test_euro_area_mapping.py  test_hkg_mac_mapping.py  test_legacy_deflate.py  test_ppp_reverse.py  test_to_current_bug.py
tests/test_deflate/: __init__.py  test_base_deflator.py  test_deflate.py  test_deflate_function.py  test_deflators.py  testing_parameters.py
tests/test_files/: FP.CPI.TOTL_1950-2025_.csv  (+3 more)
(+72 files in other folders)
