[project]
name = "pydeflate"
version = "2.4.0"
description = "Package to convert current prices figures to constant prices and vice versa"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jorge Rivera", email = "Jorge.Rivera@one.org" }]
maintainers = [{ name = "Jorge Rivera" }]
license = "MIT"
license-files = ["LICENSE*"]

dependencies = [
    "imf-reader>=1.4.1",
    "oda-reader>=1.4.2",
    "pandas>=2.0",
    "pandera>=0.20.0",
    "pyarrow>=14.0",
    "requests>=2.33.0",
    "wbgapi>=1.0.12",
    "platformdirs>=3.0.0",
    "filelock>=3.15.0",
]

[dependency-groups]
dev = [
    "hdx-python-country>=3.9.8",
    "hypothesis>=6.122.3",
    "pandas-stubs>=2.3.2.250926",
    "pre-commit>=4.0.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings[python]>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/jm-rivera/pydeflate"
Repository = "https://github.com/jm-rivera/pydeflate"
Issues = "https://github.com/jm-rivera/pydeflate/issues"


[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
